# Fingerprint_Image_Enhancement

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  checksize.cpp  checksize.h  commonfiles.h  fpenhancement.cpp  fpenhancement.h  main.cpp  normalizer.cpp  normalizer.h  ridgefilter.cpp  ridgefilter.h  ridgeorient.cpp  ridgeorient.h  setup.py  stdafx.cpp
include/: fpenhancement.h  ndarray_converter.h
src/: CMakeLists.txt  binders.cpp  checksize.h  common.h  cxxopts.hpp  fpenhancement.cpp  fpenhancement.h  main.cpp  ndarray_converter.cpp  normalizer.cpp  normalizer.h  ridgefilter.cpp  ridgefilter.h  ridgeorient.cpp  ridgeorient.h
test/: CMakeLists.txt
test/src/: fingerprint_tests.cpp
